@@ -222,6 +222,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\recording.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\recordinggroup.cpp"
 				>
 			</File>
@@ -333,6 +337,10 @@
 			</File>
 			<File
 				RelativePath="..\..\pvrclient-fortherecord.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\recording.h"
 				>
 			</File>
 			<File
